--- a/test/fixtures/questions.yml
+++ b/test/fixtures/questions.yml
@@ -1,17 +1,108 @@
+# coding: utf-8
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
-one:
-  kind: MyString
-  title: MyString
-  content: MyText
-  required: false
-  answer_content: MyText
-  answer_description: MyText
+# 動作確認データ
+radio:
+  uuid: QuestionRadio
+  kind: radio
+  title: 性別
+  content: 性別を選択してください
+  required: true
 
-two:
-  kind: MyString
-  title: MyString
-  content: MyText
+numeric:
+  uuid: QuestionNumeric
+  kind: numeric
+  title: 年齢
+  content: 年齢を選択してください
+  required: true
+
+select:
+  uuid: QuestionSelect
+  kind: select
+  title: 選択問題
+  content: 選択肢から選択してください
+  required: true
+  answer_content: 選択肢問題正解
+  answer_description: 選択肢問題の正解です
+
+prefectures:
+  uuid: QuestionPrefectures
+  kind: select
+  title: 都道府県
+  content: 出身地を選択してください
+  required: true
+  
+check:
+  uuid: QuestionCheck
+  kind: checkbox
+  title: チェックボックス
+  content: チェックボックスから選択してください
   required: false
-  answer_content: MyText
-  answer_description: MyText
+
+text:
+  uuid: QuestionText
+  kind: text
+  title: テキスト問題
+  content: テキスト問題です
+  required: false
+  answer_content: テキスト問題正解
+  answer_description: テキスト問題の正解です
+
+textarea:
+  uuid: QuestionTextarea
+  kind: textarea
+  title: テキストエリア
+  content: テキストエリアです
+  required: false
+
+# nil要素動作確認用
+nullable_q1:
+  uuid: NullableQuestion1
+  kind: text
+  answer_content: nil要素確認用
+ 
+nullable_q2:
+  uuid: NullableQuestion2
+  kind: text
+  required: false
+
+# 空回答確認用
+unrequired_numeric:
+  uuid: QuestionUnrequiredNumeric
+  kind: numeric
+  title: 年齢
+  content: 年齢を入力してください。
+  required: false
+
+unrequired_radio:
+  uuid: QuestionUnrequiredRadio
+  kind: radio
+  title: 性別
+  content: 性別を選択してください。
+  required: false
+
+unrequired_select:
+  uuid: QuestionUnrequiredSelect
+  kind: select
+  title: 選択
+  content: 選択肢から選択してください。
+  required: false
+
+unrequired_check:
+  uuid: QuestionUnrequiredCheck
+  kind: checkbox
+  title: チェックボックス
+  content: チェックボックスから選択してください。
+  required: false
+
+# 異常系の確認用データ
+# 設問と選択肢が矛盾している
+incons_question:
+  uuid: QuestionInconsistency
+  kind: select
+  title: 設問と選択肢が矛盾している
+  content: 設問と選択肢が矛盾している
+  required: true
+  answer_content: 設問と選択肢が矛盾している
+  answer_description: 設問と選択肢が矛盾している
+
